tests/toylang/pos/000090_cdrc2.toylang
program a = { if a then sleep else a = a; } .
