tests/toylang/neg/001121_mutation.toylang
program a = { if a { } then sleep; } .
